--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "ethers": "^6.12.1",
     "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
@@ -28,7 +30,9 @@
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
