--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^10.12.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-date-picker": "^5.0.4",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.11.0",
